Add functions for plotting dose response curves, single and multiple

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(edgeEffect)
 export(fillWells)
 export(plotCompare)
 export(plotCorMatrix)
+export(plotDR)
+export(plotDR_allTraits)
 export(plotTrait)
 export(readPlate)
 export(readSorter)
