--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Title: COPASutils
 Version: 0.1
 Authors@R: "Tyler Shimko <TShimko126@gmail.com> [aut, cre]"
 Description: Quick and easy analysis of data from Union Biometrica COPAS
-    Biosort large particle flow cytometer
+    BIOSORT large particle flow cytometer
 Depends:
-    R (>= 3.0.2),
-    plyr (>= 1.8),
-    kernlab (>= 0.9),
+    R (>= 3.0),
+    dplyr (>= 0.2),
     ggplot2 (>= 0.9)
+    kernlab (>= 0.9),
 License: GPL (>= 2)
 LazyData: true
