--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: Quick and easy analysis of data from Union Biometrica COPAS
 Depends:
     R (>= 3.0),
     dplyr (>= 0.2),
-    ggplot2 (>= 0.9)
-    kernlab (>= 0.9),
+    ggplot2 (>= 0.9),
+    kernlab (>= 0.9)
+
 License: GPL (>= 2)
 LazyData: true
