Add stringr requirement

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Depends:
     dplyr (>= 0.2),
     ggplot2 (>= 0.9),
     kernlab (>= 0.9),
-    reshape2 (>= 1.0)
+    reshape2 (>= 1.0),
+    stringr (>= 0.6)
 License: GPL (>= 2.0)
 LazyData: TRUE
