--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports:
     dplyr (>= 0.2),
     kernlab (>= 0.9),
     stringr (>= 0.6),
-    knitr (>= 1.6)
+    knitr (>= 1.6),
+    tidyr
 License: GPL (>= 2)
 LazyData: TRUE
 VignetteBuilder: knitr
